--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 html {
   box-sizing: border-box;
-  background-color: #f2f1ed;
+  background-color: #f2fled;
   font-family: Georgia, serif;
-  list-style: 1.5;
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
